--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 45px 150px;
 }
 
 ul {
@@ -20,9 +21,6 @@ nav a {
     color: #474747;
 }
 
-body {
-    font-family: 'Open Sans', sans-serif;
-}
 
 .text-primary {
     color: #FD6E0A;
@@ -38,4 +36,72 @@ body {
     font-weight: 400;
     line-height: normal;
     padding: 15px 35px;
+}
+
+.first-name {
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+
+.texts {
+    color: #757575;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 0;
+}
+
+.banner {
+    display: flex;
+    padding: 30px 30px 0px 150px;
+}
+
+.header {
+    background: #FFF8F3;
+    background-image: url(../images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
+
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.small-text {
+    color: #474747;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+img {
+    width: 500px;
+}
+
+.banner-greeting {
+    color: #474747;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    color: #181818;
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-content{
+    max-width: 500px;
 }
