--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -52,11 +52,13 @@ nav a {
     font-weight: 400;
     line-height: 30px;
     margin-top: 0;
+    width: 585px;
 }
 
 .banner {
     display: flex;
     padding: 30px 30px 0px 150px;
+    justify-content: space-between;
 }
 
 .header {
@@ -64,6 +66,7 @@ nav a {
     background-image: url(../images/header_bg.png);
     background-repeat: no-repeat;
     background-position: bottom right;
+
 
 }
 
@@ -80,7 +83,9 @@ body {
 }
 
 img {
-    width: 500px;
+    width: 584px;
+    height: 676px;
+    flex-shrink: 0;
 }
 
 .banner-greeting {
@@ -102,6 +107,48 @@ img {
     margin-bottom: 20px;
 }
 
-.banner-content{
+.banner-content {
     max-width: 500px;
+}
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    padding: 130px 0 0 0;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    width: 827px;
+    margin: auto auto;
+
+
+}
+
+.about {
+    margin: 130px auto;
+    height: 550px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    padding: 0px 157px 0px 157px;
+    
+    
+}
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+.about-info-container{
+    display: flex;
+    max-width: 827px;
+    justify-content: space-around;
+    text-align: center;
 }
