--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -170,7 +170,24 @@ main {
     padding: 30px 115px;
 }
 
+.skill-container .skill img{
+    width: 44px;
+    height: 42px;
+}
 
-.icon{
-    width: 100%;
+.skill-container{
+    display: flex;
+    justify-content: space-around;
+    gap: 25px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background-color: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description{
+    color: #757575;
 }
